--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -31,6 +31,12 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 	<dependencies>
 
+		<!-- GA4GH -->
+		<dependency>
+			<groupId>org.collaboratory</groupId>
+			<artifactId>ga4gh-schema</artifactId>
+		</dependency>
+
 		<!-- DCC - Common -->
 		<dependency>
 			<groupId>org.icgc.dcc</groupId>
@@ -46,13 +52,12 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>		
-
-		<!-- GA4GH -->
+		
+		<!-- Genomics -->
 		<dependency>
-			<groupId>org.collaboratory</groupId>
-			<artifactId>ga4gh-schema</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+			<groupId>com.github.samtools</groupId>
+			<artifactId>htsjdk</artifactId>
+		</dependency>		
 		
 		<!-- Protobuf -->
 		<dependency>
