--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,23 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		</repository>
 	</repositories>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>annotations</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
+			<!-- GA4GH -->
+			<dependency>
+				<groupId>org.collaboratory</groupId>
+				<artifactId>ga4gh-schema</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+				
 	    	<!-- Spring -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -58,6 +73,19 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<groupId>org.icgc.dcc</groupId>
 				<artifactId>dcc-common-core</artifactId>
 				<version>${dcc-common.version}</version>
+			</dependency>
+			
+			<!-- Genomics -->
+			<dependency>
+				<groupId>com.github.samtools</groupId>
+				<artifactId>htsjdk</artifactId>
+				<version>${htsjdk.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>*</groupId>
+						<artifactId>*</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -86,6 +114,9 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<slf4j.version>1.7.21</slf4j.version>
 		<!-- Versions - Spring Boot - Logging -->
 		<logback.version>1.1.7</logback.version>
+		
+		<!-- Versions - Genomics -->
+		<htsjdk.version>2.1.0</htsjdk.version>
 		
 		<!-- Versions - Test -->
 		<junit.version>4.12</junit.version>
