--- a/ga4gh-schema/pom.xml
+++ b/ga4gh-schema/pom.xml
@@ -30,23 +30,28 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<description>${project.name}</description>
 
 	<dependencies>
-
 		<!-- Protobuf -->
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>${proto.version}</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
+		<extensions>
+			<!-- For protobuf-maven-plugin -->
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>${os-maven-plugin.version}</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<!-- Generate sources -->
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>download-maven-plugin</artifactId>
-				<version>1.3.0</version>
 				<executions>
 					<execution>
 						<id>download-ga4gh-schemas</id>
@@ -65,12 +70,11 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<plugin>
 				<groupId>org.xolstice.maven.plugins</groupId>
 				<artifactId>protobuf-maven-plugin</artifactId>
-				<version>0.5.0</version>
+				<version>${protobuf-maven-plugin.version}</version>
 				<configuration>
 					<protocArtifact>com.google.protobuf:protoc:${proto.version}:exe:${os.detected.classifier}</protocArtifact>
 					<protoSourceRoot>${project.build.directory}/schemas-${ga4gh-schema.version}/src/main/proto</protoSourceRoot>
 					<outputDirectory>${project.build.directory}/generated-sources/java</outputDirectory>
-					<lineLength>132</lineLength>
 				</configuration>
 				<executions>
 					<execution>
@@ -97,6 +101,48 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<!-- Eclipse -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.googlecode.maven-download-plugin</groupId>
+										<artifactId>download-maven-plugin</artifactId>
+										<versionRange>[0.0.0,)</versionRange>
+										<goals>
+											<goal>wget</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.xolstice.maven.plugins</groupId>
+										<artifactId>protobuf-maven-plugin</artifactId>
+										<versionRange>[0.0.0,)</versionRange>
+										<goals>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<properties>
@@ -105,6 +151,10 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		
 		<!-- Versions - Protobuf -->
 		<proto.version>3.0.0-beta-3</proto.version>
+		
+		<!-- Versions - Plugins -->
+		<os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
+		<protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
 	</properties>
 
 </project>
