--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -66,6 +66,12 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<version>${protobuf-java-format.version}</version>
 		</dependency>
 		
+		<!-- Search -->
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+		</dependency>
+		
 		<!-- Utilities -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -102,6 +108,8 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<properties>
 		<!-- Versions - Protobuf -->
 		<protobuf-java-format.version>1.4</protobuf-java-format.version>
+		<!-- Versions - Spring Boot - Jackson -->
+		<jackson.version>2.8.3</jackson.version>
 	</properties>
 
 </project>
