--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 	<properties>
 		<!-- Versions - DCC -->
-		<dcc-common.version>4.2.14</dcc-common.version>
+		<dcc-common.version>4.2.15-SNAPSHOT</dcc-common.version>
 			
 		<!-- Versions - Spring Boot -->
 		<spring-boot.version>1.4.1.RELEASE</spring-boot.version>
