--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -71,6 +71,11 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+			<version>${elasticsearch.version}</version>
+		</dependency>
 		
 		<!-- Utilities -->
 		<dependency>
@@ -110,6 +115,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<protobuf-java-format.version>1.4</protobuf-java-format.version>
 		<!-- Versions - Spring Boot - Jackson -->
 		<jackson.version>2.8.3</jackson.version>
+		<elasticsearch.version>5.0.0</elasticsearch.version>
 	</properties>
 
 </project>
