--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<artifactId>annotations</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<!--  Logging -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -74,6 +81,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<artifactId>dcc-common-core</artifactId>
 				<version>${dcc-common.version}</version>
 			</dependency>
+
 
 			<!-- Genomics -->
 			<dependency>
