--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -109,7 +109,8 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<properties>
 		<!-- Versions - Protobuf -->
 		<protobuf-java-format.version>1.4</protobuf-java-format.version>
-		<!-- Versions - Spring Boot - Jackson -->
+
+		<!-- Versions - Jackson Version override needed for ES5.0.0 upgrade -->
 		<jackson.version>2.8.1</jackson.version>
 		<elasticsearch.version>5.0.0</elasticsearch.version>
 	</properties>
