--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 		<!-- Versions - Test -->
 		<junit.version>4.12</junit.version>
+
+		<!-- Versions - Jackson Version override needed for ES5.0.0 upgrade -->
+		<jackson.version>2.8.1</jackson.version>
+		<jackson-smile.version>2.8.1</jackson-smile.version>
+		<jackson-yaml.version>2.8.1</jackson-yaml.version>
+		<jackson-csv.version>2.8.1</jackson-csv.version>
+		<elasticsearch.version>5.0.0</elasticsearch.version>
 	</properties>
 
 </project>
