--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -31,6 +31,13 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 	<dependencies>
 
+		<!-- GA4GH -->
+		<dependency>
+			<groupId>org.collaboratory</groupId>
+			<artifactId>ga4gh-resources</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- DCC - Common -->
 		<dependency>
 			<groupId>org.icgc.dcc</groupId>
@@ -39,18 +46,12 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<dependency>
 			<groupId>org.icgc.dcc</groupId>
 			<artifactId>dcc-common-es</artifactId>
-			<version>${dcc-common.version}</version>
 		</dependency>
 
 		<!-- Search -->
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>transport</artifactId>
-			<version>${elasticsearch.version}</version>
+			<groupId>org.icgc.dcc</groupId>
+			<artifactId>elasticsearch-shaded</artifactId>
 		</dependency>
 
 		<!-- Genomics -->
@@ -69,6 +70,13 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
+		
+		<!-- Test - Search -->
+		<dependency>
+			<groupId>org.icgc.dcc</groupId>
+			<artifactId>elasticsearch-test-shaded</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -84,7 +92,6 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 					</archive>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
