--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,25 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<module>ga4gh-schema</module>
 		<module>ga4gh-server</module>
 		<module>ga4gh-loader</module>
+		<module>ga4gh-resources</module>
 	</modules>
 
 	<repositories>
 		<repository>
 			<id>dcc-releases</id>
 			<url>https://artifacts.oicr.on.ca/artifactory/dcc-release</url>
+		</repository>
+		<repository>
+			<id>dcc-dependencies</id>
+			<url>https://artifacts.oicr.on.ca/artifactory/dcc-dependencies</url>
+		</repository>
+		<!-- Remove after the Elasticsearch 5.0.0 mappings are released -->
+		<repository>
+			<id>dcc-pr-snapshot</id>
+			<url>https://artifacts.oicr.on.ca/artifactory/dcc-pr-snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
@@ -53,7 +66,6 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.6.2</version>
 		</dependency>
 	</dependencies>
 
@@ -64,6 +76,19 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<groupId>org.collaboratory</groupId>
 				<artifactId>ga4gh-schema</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+
+			<!-- Search -->
+			<dependency>
+				<groupId>org.icgc.dcc</groupId>
+				<artifactId>elasticsearch-shaded</artifactId>
+				<version>${elasticsearch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.icgc.dcc</groupId>
+				<artifactId>elasticsearch-test-shaded</artifactId>
+				<version>${elasticsearch.version}</version>
+				<scope>test</scope>
 			</dependency>
 
 	    	<!-- Spring -->
@@ -81,7 +106,11 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<artifactId>dcc-common-core</artifactId>
 				<version>${dcc-common.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.icgc.dcc</groupId>
+				<artifactId>dcc-common-es</artifactId>
+				<version>${dcc-common.version}</version>
+			</dependency>			
 
 			<!-- Genomics -->
 			<dependency>
@@ -100,7 +129,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 	<properties>
 		<!-- Versions - DCC -->
-		<dcc-common.version>4.3.4</dcc-common.version>
+		<dcc-common.version>4.3.5-20161124.151808-4</dcc-common.version>
 
 		<!-- Versions - Spring Boot -->
 		<spring-boot.version>1.4.1.RELEASE</spring-boot.version>
