--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
@@ -3,39 +3,39 @@
 		"properties": {
 			"id": {
 				"type": "keyword",
-				"index": "false"
-			},
-			"variant_set_id": {
-				"type": "keyword",
-				"index": "false"
-			},
-			"call_set_id": {
-				"type": "keyword",
-				"index": "false"
+				"index": "true"
 			},
 			"start": {
 				"type": "long",
-				"index": "false"
+				"index": "true"
 			},
 			"end": {
 				"type": "long",
-				"index": "false"
+				"index": "true"
 			},
 			"reference_name": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
 			},
-			"file_id": {
+			"call_set_id": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
 			},
 			"donor_id": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
 			},
-			"sample_id": {
+			"variant_set_id": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
+			},
+			"data_type": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"object_id": {
+				"type": "keyword",
+				"index": "true"
 			},
 			"record": {
 				"type": "text",
