updated with callsets and variants and bio_sample indexes. still need to debug

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
@@ -1,9 +1,25 @@
 {
 	"callset": {
 		"properties": {
-			"vcf_header": {
+			"id": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
+			},
+			"name": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"caller_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"variant_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"data_set_id": {
+				"type": "keyword",
+				"index": "true"
 			}
 		},
 		"_all": {
