got server working, and everything loaded. need to add calls, and refine quieres and datamodel

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
@@ -33,6 +33,10 @@
 				"type": "keyword",
 				"index": "true"
 			},
+			"call_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
 			"data_type": {
 				"type": "keyword",
 				"index": "true"
