--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
@@ -17,10 +17,6 @@
 				"type": "keyword",
 				"index": "true"
 			},
-			"caller_id": {
-				"type": "keyword",
-				"index": "true"
-			},
 			"donor_id": {
 				"type": "keyword",
 				"index": "true"
@@ -29,13 +25,51 @@
 				"type": "keyword",
 				"index": "true"
 			},
-			"variant_set_id": {
-				"type": "keyword",
-				"index": "true"
+			"variant_sets": {
+				"type": "nested",
+				"properties" : {
+					"id" : {
+						"type": "keyword",
+						"index": "true"
+					},
+					"name" : {
+						"type": "keyword",
+						"index": "false"
+					},
+					"data_set_id" : {
+						"type": "keyword",
+						"index": "true"
+					},
+					"reference_set_id" : {
+						"type": "keyword",
+						"index": "true"
+					}
+				}
 			},
-			"call_set_id": {
-				"type": "keyword",
-				"index": "true"
+			"calls": {
+				"type": "nested",
+				"properties" : {
+					"name": {
+						"type": "keyword",
+						"index": "false"
+					},
+					"call_set_id": {
+						"type": "keyword",
+						"index": "true"
+					},
+					"call_set_name": {
+						"type": "keyword",
+						"index": "false"
+					},
+					"genotype" : {
+						"type": "integer",
+						"index": "true"
+					},
+					"phaseset" : {
+						"type": "keyword",
+						"index": "true"
+					}
+				}
 			},
 			"data_type": {
 				"type": "keyword",
