added variant_set_id to calls nested structure, and fixed typos

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
@@ -65,6 +65,14 @@
 						"type": "integer",
 						"index": "true"
 					},
+					"variant_set_id" : {
+						"type": "keyword",
+						"index": "true"
+					},
+					"bio_sample_id" : {
+						"type": "keyword",
+						"index": "true"
+					},
 					"phaseset" : {
 						"type": "keyword",
 						"index": "true"
