added new mappings. loading variants

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
@@ -9,15 +9,11 @@
 				"type": "keyword",
 				"index": "true"
 			},
-			"caller_id": {
-				"type": "keyword",
-				"index": "true"
-			},
 			"variant_set_id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"data_set_id": {
+			"bio_sample_id": {
 				"type": "keyword",
 				"index": "true"
 			}
