--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -1,25 +1,33 @@
 {
-	"bio_sample": {
+	"call": {
 		"properties": {
 			"id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"donor_id": {
+			"name": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"data_set_id": {
+			"genotype": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"reference_set_id": {
+			"phaseset": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"vcf_header": {
+			"variant_set_id": {
 				"type": "keyword",
-				"index": "false"
+				"index": "true"
+			},
+			"call_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"bio_sample_id": {
+				"type": "keyword",
+				"index": "true"
 			}
 		},
 		"_all": {
@@ -27,6 +35,10 @@
 		},
 		"_source": {
 			"enabled": true
+		},
+		"_parent" : {
+			"type" : "variant"
 		}
+		
 	}
 }
