--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant_set.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant_set.mapping.json
@@ -1,24 +1,24 @@
 {
-	"variant": {
+	"variant_set": {
 		"properties": {
 			"id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"start": {
-				"type": "long",
-				"index": "true"
-			},
-			"end": {
-				"type": "long",
-				"index": "true"
-			},
-			"reference_name": {
+			"name": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"record": {
-				"type": "text",
+			"data_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"reference_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"vcf_header": {
+				"type": "keyword",
 				"index": "false"
 			}
 		},
