got call child loading working

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -10,7 +10,7 @@
 				"index": "true"
 			},
 			"genotype": {
-				"type": "keyword",
+				"type": "integer",
 				"index": "true"
 			},
 			"phaseset": {
