--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/vcf_header.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/vcf_header.mapping.json
@@ -1,21 +1,21 @@
 {
-	"variant_set": {
+	"vcf_header": {
 		"properties": {
-			"id": {
+			"variant_set_id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"name": {
+			"donor_id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"data_set_id": {
+			"bio_sample_id": {
 				"type": "keyword",
 				"index": "true"
 			},
-			"reference_set_id": {
+			"vcf_header": {
 				"type": "keyword",
-				"index": "true"
+				"index": "false"
 			}
 		},
 		"_all": {
@@ -23,6 +23,10 @@
 		},
 		"_source": {
 			"enabled": true
+		},
+		"_parent" : {
+			"type" : "variant_set"
 		}
+		
 	}
 }
