updated callset loading. Still working on callset service

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
@@ -9,7 +9,7 @@
 				"type": "keyword",
 				"index": "true"
 			},
-			"variant_set_id": {
+			"variant_set_ids": {
 				"type": "keyword",
 				"index": "true"
 			},
