--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -29,12 +29,11 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<name>${project.artifactId}</name>
 	<description>${project.name}</description>
 
-	<dependencies>
-
+	<dependencies> 
 		<!-- GA4GH -->
 		<dependency>
 			<groupId>org.collaboratory</groupId>
-			<artifactId>ga4gh-resources</artifactId>
+			<artifactId>ga4gh-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
