--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>ga4gh-common</module>
 		<module>ga4gh-schema</module>
 		<module>ga4gh-server</module>
 		<module>ga4gh-loader</module>
-		<module>ga4gh-resources</module>
 	</modules>
 
 	<repositories>
