--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -33,7 +33,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<!-- GA4GH -->
 		<dependency>
 			<groupId>org.collaboratory</groupId>
-			<artifactId>ga4gh-common</artifactId>
+			<artifactId>ga4gh-resources</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
