--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -29,11 +29,16 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<name>${project.artifactId}</name>
 	<description>${project.name}</description>
 
-	<dependencies> 
+	<dependencies>
 		<!-- GA4GH -->
 		<dependency>
 			<groupId>org.collaboratory</groupId>
 			<artifactId>ga4gh-resources</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.collaboratory</groupId>
+			<artifactId>ga4gh-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
@@ -69,7 +74,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-		
+
 		<!-- Test - Search -->
 		<dependency>
 			<groupId>org.icgc.dcc</groupId>
