--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -42,6 +42,11 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<artifactId>ga4gh-resources</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.collaboratory</groupId>
+			<artifactId>ga4gh-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- DCC - Common -->
 		<dependency>
