droped record mapping, and added ref_bases and alt_bases

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/variant.mapping.json
@@ -17,8 +17,12 @@
 				"type": "keyword",
 				"index": "true"
 			},
-			"record": {
-				"type": "text",
+			"reference_bases": {
+				"type": "keyword",
+				"index": "false"
+			},
+			"alternate_bases": {
+				"type": "keyword",
 				"index": "false"
 			}
 		},
