--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<module>ga4gh-schema</module>
 		<module>ga4gh-server</module>
 		<module>ga4gh-loader</module>
+		<module>ga4gh-core</module>
 	</modules>
 
 	<repositories>
