--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,9 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<properties>
 		<!-- Versions - DCC -->
 		<dcc-common.version>4.3.5-20161124.151808-4</dcc-common.version>
+<!--  		
+		<dcc-common.version>4.3.9-SNAPSHOT</dcc-common.version>
+-->
 
 		<!-- Versions - Spring Boot -->
 		<spring-boot.version>1.4.1.RELEASE</spring-boot.version>
