--- a/pom.xml
+++ b/pom.xml
@@ -130,10 +130,10 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 
 	<properties>
 		<!-- Versions - DCC -->
-		<dcc-common.version>4.3.5-20161124.151808-4</dcc-common.version>
-<!--  		
-		<dcc-common.version>4.3.9-SNAPSHOT</dcc-common.version>
--->
+<!-- 		<dcc-common.version>4.3.5-20161124.151808-4</dcc-common.version>
+ -->
+		<!-- Contains Vilalii's ES5.0.0 and parent/child update -->		
+		<dcc-common.version>4.3.9-20161213.220810-3</dcc-common.version>
 
 		<!-- Versions - Spring Boot -->
 		<spring-boot.version>1.4.1.RELEASE</spring-boot.version>
