added command line configuratble configs, and updated transport.settings

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/settings/transport.properties
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/settings/transport.properties
@@ -1,4 +1,8 @@
-thread_pool.bulk.size = 1
-thread_pool.bulk.queue_size = 1
-thread_pool.index.size = 1
-thread_pool.index.queue_size = 100
+# thread_pool.bulk.size = 1
+# thread_pool.bulk.queue_size = 1
+# thread_pool.index.size = 1
+# thread_pool.index.queue_size = 100
+
+client.transport.ping_timeout = 20s
+client.transport.nodes_sampler_interval = 10s
+client.transport.sniff = true
