--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -30,6 +30,13 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<description>${project.name}</description>
 
 	<dependencies>
+		<!-- MapDB -->
+		<dependency>
+		  <groupId>org.mapdb</groupId>
+		  <artifactId>mapdb</artifactId>
+		  <version>${mapdb.version}</version>
+		</dependency>
+
 		<!-- GA4GH -->
 		<dependency>
 			<groupId>org.collaboratory</groupId>
@@ -125,6 +132,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<properties>
 		<!-- Versions - Genomics -->
 		<htsjdk.version>2.1.0</htsjdk.version>
+		<mapdb.version>3.0.3</mapdb.version>
 	</properties>
 
 </project>
