changed types to binary and fixed log output for counter monitor

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -10,11 +10,11 @@
 				"index": "true"
 			},
 			"info": {
-				"type": "keyword",
+				"type": "binary",
 				"index": "false"
 			},
 			"genotype": {
-				"type": "keyword",
+				"type": "binary",
 				"index": "false"
 			}
 		},
