changed EsModel interface to have toDocument. updated ArrayNode builders, renamed other functions. Added convertNonRefAlleles. Updated EsCall and VariantService to match new index mappings/settings

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -10,11 +10,18 @@
 				"index": "true"
 			},
 			"info": {
-				"type": "binary",
+				"type" : "object"
+			},
+			"genotype_likelihood": {
+				"type": "keyword",
 				"index": "false"
 			},
-			"genotype": {
-				"type": "binary",
+			"genotype_phaseset": {
+				"type": "boolean",
+				"index": "false"
+			},
+			"non_reference_alleles": {
+				"type": "integer",
 				"index": "false"
 			}
 		},
