--- a/ga4gh-core/pom.xml
+++ b/ga4gh-core/pom.xml
@@ -36,5 +36,18 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<!--  TODO: Might need to move this to project pom and let the rest inherrit -->
+		<dependency>
+			<groupId>org.icgc.dcc</groupId>
+			<artifactId>dcc-common-core</artifactId>
+		</dependency>
+
+		<!--  TODO: Might need to move this to project pom and let the rest inherrit -->
+		<!-- Search -->
+		<dependency>
+			<groupId>org.icgc.dcc</groupId>
+			<artifactId>elasticsearch-shaded</artifactId>
+		</dependency>
 	</dependencies>
 </project>
