changed variant_set_id and call_set_id to integers, and updated models accordingly

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -2,11 +2,11 @@
 	"call": {
 		"properties": {
 			"variant_set_id": {
-				"type": "keyword",
+				"type": "integer",
 				"index": "true"
 			},
 			"call_set_id": {
-				"type": "keyword",
+				"type": "integer",
 				"index": "true"
 			},
 			"info": {
