--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/callset.mapping.json
@@ -6,7 +6,7 @@
 				"index": "true"
 			},
 			"variant_set_ids": {
-				"type": "keyword",
+				"type": "integer",
 				"index": "true"
 			},
 			"bio_sample_id": {
