--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/vcf_header.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/vcf_header.mapping.json
@@ -2,7 +2,7 @@
 	"vcf_header": {
 		"properties": {
 			"variant_set_id": {
-				"type": "keyword",
+				"type": "integer",
 				"index": "true"
 			},
 			"donor_id": {
