refactored and fixed some small issues

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/index.settings.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/index.settings.json
@@ -1,4 +1,5 @@
 {
   "index.number_of_shards":10,
-  "index.number_of_replicas":1
+  "index.number_of_replicas":1,
+  "index.max_result_window":100000
 }
