--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 		<jackson-yaml.version>2.8.1</jackson-yaml.version>
 		<jackson-csv.version>2.8.1</jackson-csv.version>
 		<elasticsearch.version>5.1.2</elasticsearch.version>
+		<lombok.version>1.16.10</lombok.version>
 	</properties>
 
 </project>
