added CallSetName to EsCall model, and did all associated changes. This is a good example of how to properly add new type properties.

--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/call.mapping.json
@@ -9,6 +9,10 @@
 				"type": "integer",
 				"index": "true"
 			},
+			"call_set_name": {
+				"type": "keyword",
+				"index": "true"
+			},
 			"info": {
 				"type" : "object"
 			},
