--- a/ga4gh-loader/pom.xml
+++ b/ga4gh-loader/pom.xml
@@ -91,7 +91,8 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.icgc.dcc.ga4gh.loader.Loader</mainClass>
+							<!--<mainClass>org.icgc.dcc.ga4gh.loader.Loader</mainClass>-->
+							<mainClass>org.icgc.dcc.ga4gh.loader2.SecondLoader</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -101,7 +102,8 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.icgc.dcc.ga4gh.loader.Loader</mainClass>
+							<!--<mainClass>org.icgc.dcc.ga4gh.loader.Loader</mainClass>-->
+							<mainClass>org.icgc.dcc.ga4gh.loader2.SecondLoader</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
