--- a/ga4gh-resources/src/main/resources/org/icgc/dcc/ga4gh/resources/mappings/variant.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/icgc/dcc/ga4gh/resources/mappings/variant.mapping.json
@@ -20,6 +20,44 @@
 			"alternate_bases": {
 				"type": "keyword",
 				"index": "false"
+			},
+			"calls" :{
+				"type" : "nested",
+				"properties": {
+					"variant_set_id": {
+						"type": "integer",
+						"index": "true"
+					},
+					"call_set_id": {
+						"type": "integer",
+						"index": "true"
+					},
+					"call_set_name": {
+						"type": "keyword",
+						"index": "true"
+					},
+					"info": {
+						"type" : "object"
+					},
+					"genotype_likelihood": {
+						"type": "keyword",
+						"index": "false"
+					},
+					"genotype_phaseset": {
+						"type": "boolean",
+						"index": "false"
+					},
+					"non_reference_alleles": {
+						"type": "integer",
+						"index": "false"
+					}
+				},
+				"_all": {
+					"enabled": false
+				},
+				"_source": {
+					"enabled": true
+				}
 			}
 		},
 		"_all": {
