--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -84,6 +84,12 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 			<artifactId>elasticsearch-shaded</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${opencsv.version}</version>
+		</dependency>
+
 		<!-- Utilities -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -127,6 +133,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 	<properties>
 		<!-- Versions - Protobuf -->
 		<protobuf-java-format.version>1.4</protobuf-java-format.version>
+        <opencsv.version>3.9</opencsv.version>
 	</properties>
 
 </project>
