--- a/ga4gh-server/pom.xml
+++ b/ga4gh-server/pom.xml
@@ -117,8 +117,8 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 				<version>${spring-boot-maven-plugin.version}</version>
 				<configuration>
 					<fork>true</fork>
-					<mainClass>org.icgc.dcc.ga4gh.server.ServerMain</mainClass>
-					<!--<mainClass>org.icgc.dcc.ga4gh.server.performance.Performance</mainClass>-->
+					<!--<mainClass>org.icgc.dcc.ga4gh.server.ServerMain</mainClass>-->
+					<mainClass>org.icgc.dcc.ga4gh.server.performance.Performance</mainClass>
 				</configuration>
 				<executions>
 					<execution>
